--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,9 @@
     </head>
     <body>
         <h1>Lasagna</h1>
+        <img src="../images/lasagna.jpg" alt="finished lasagna">
+        <h3>The lasagna when it's finished</h3>
+
+        <p></p>
     </body>
 </html>
