Add placeholders in page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,6 +9,22 @@
         <img src="../images/lasagna.jpg" alt="finished lasagna">
         <h3>The lasagna when it's finished</h3>
 
-        <p></p>
+        <p>Description paragraph one</p>
+        <p>Description paragraph two</p>
+
+        <ul>
+            <li>milk</li>
+            <li>ground beef</li>
+            <li>carrot</li>
+            <li>onion</li>
+            <li>peeled tomatoes</li>
+        </ul>
+
+        <ol>
+            <li>Cut the onions, the carrots</li>
+            <li>etc</li>
+            <li>etc</li>
+            <li>etc</li>
+        </ol>
     </body>
 </html>
