--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,8 +9,8 @@
         <img src="../images/lasagna.jpg" alt="finished lasagna">
         <h5>The lasagna when it's finished</h5>
 
-        <p>Description paragraph one</p>
-        <p>Description paragraph two</p>
+        <p>This recipe was given to me by my grandmother. She was a great cook and the thing I loved most when she made was this lasagna.</p>
+        <p>It takes about 30 minutes to prepare, and then 30 minutes of oven time to finish it off and you'll have a nice, beautifully layered lasagna for everyone to enjoy!</p>
 
         <ul>
             <li>1 (16 ounce) package lasagna noodles</li>
