--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">Lasagna</a>
-        <a href="/recipes/burrito.html">Burritos</a>
+        <a href="./recipes/burrito.html">Burritos</a>
+        <a href="./recipes/macncheese.html">Mac and Cheese</a>
     </body>
 </html>
